--- a/Ajconnect.html
+++ b/Ajconnect.html
@@ -12,13 +12,23 @@
                 <div class="logo"> AjConnect</div>
             </div>
             <div class="main">
-                <div>Hi ${user?.name}</div>
+                <div class="hello">Congratulations🚀🚀🥳${user?.name}</div>
                 <br>
-                <div>We welcome you into the Ajconnect family</div>
+                <div>We welcome you into the Ajconnect family, <br>Stay updated on what is happening in Aj and Lagos at large</div>
                 <br>
                 <div>We noticed that you're trying to log into your account from a new device which haven't been used before now</div>
                 <div>If you didn't do this, take a step and secure your account </div>
-                <div>Click on the Link to <a href="">Signin</a> Complete your signin, as</div>
+                <div>Click on the Link below to complete your signin</div>
+                <br>
+                <div>This link sent to you would be inactive in 3days time.</div>
+               <div class="well">
+                <div>
+                  <button class="click-me" style="cursor: pointer; transition: all 350ms;">Complete Registration</button>
+                </div>
+               </div>
+               <div><span>Note:</span>This complete signup was intended for ${user?.userName} <br>
+              If not ${user?.userName}take steps to secure your account <a href="">Security</a>
+              </div>
             </div>
         </div>
     </div>
