--- a/Ajconnect.html
+++ b/Ajconnect.html
@@ -26,9 +26,12 @@
                   <button class="click-me" style="cursor: pointer; transition: all 350ms;">Complete Registration</button>
                 </div>
                </div>
-               <div><span>Note:</span>This complete signup was intended for ${user?.userName} <br>
+               <div><span class="note">Note:</span>This complete signup was intended for ${user?.userName} <br>
               If not ${user?.userName}take steps to secure your account <a href="">Security</a>
               </div>
+              <br>
+              <br>
+              <div class="sign">sign: <span class="touch">AjConnectTeam</span></div>
             </div>
         </div>
     </div>
